--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.imad.fastcommand</groupId>
-	<artifactId>FastCommand</artifactId>
+	<groupId>com.app.booksexchange</groupId>
+	<artifactId>booksexchange</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>FastCommand Maven Webapp</name>
+	<name>Books Exchange Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -96,12 +96,7 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-		<!-- WaterMark itext dependency -->
-		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itext-pdfa</artifactId>
-			<version>5.5.1</version>
-		</dependency>
+
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
@@ -150,12 +145,6 @@
 		</dependency>
 		<!-- Fin correction pour HTTPS IE -->
 
-		<!-- POI (for Excel build) -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.10-FINAL</version>
-		</dependency>
 		<!-- MySQL database driver -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -169,11 +158,16 @@
 			<version>2.22.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.3</version>
+		</dependency>
 
 	</dependencies>
 
 	<build>
-		<finalName>FastCommand</finalName>
+		<finalName>booksexchange</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
