--- a/src/main/webapp/WEB-INF/spring.properties
+++ b/src/main/webapp/WEB-INF/spring.properties
@@ -2,6 +2,6 @@
 app.jdbc.driverClassName=com.mysql.jdbc.Driver
 app.jdbc.url=jdbc:mysql://localhost:3306/booksexchange
 app.jdbc.username=root
-app.jdbc.password=root
+app.jdbc.password=
 #hibernate properties
 hibernate.config=/WEB-INF/hibernate.cfg.xml
